Fix wc-tray z-index and ensure items inside the tray can't be focused

--- a/src/components/wc-tray/styles.css
+++ b/src/components/wc-tray/styles.css
@@ -9,6 +9,11 @@
   width: 100vw;
   height: 100vh;
   background: rgba(0,0,0,0.6);
+  z-index: 1000;
+}
+
+:host(:not([open])) > div {
+  display: none;
 }
 
 div {
